# counter

./: build.nix  buildDocker.nix  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  example.env  flake.nix  main.go  readme.md  taskDefinition.json
.github/workflows/: github-action.yml
app/: backend.dockerfile  pyproject.toml
app/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
