[tool.poetry]
name = "counter"
version = "0.1.0"
description = ""
authors = ["Marcus Jörgensson <marcusjorgensson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.66.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
